# python_lab2

./: .gitignore  .history.txt  .pre-commit-config.yaml  README.md  pyproject.toml
src/: archives.py  cat.py  cd.py  command_undo.py  constants.py  cp.py  grep.py  history.py  log.py  ls.py  main.py  mv.py  rm.py
src/commands/: archives.py  cat.py  cd.py  command_undo.py  cp.py  grep.py  history.py  ls.py  mv.py  rm.py
tests/: conftest.py  conftests.py  test_archives.py  test_cat.py  test_cd.py  test_cp.py  test_grep.py  test_log.py  test_ls.py  test_main.py  test_mv.py  test_rm.py  test_undo.py  tests_cat.py  tests_cd.py  tests_log.py  tests_ls.py  tests_main.py  tests_rm.py
